--- a/calendar2.html
+++ b/calendar2.html
@@ -230,7 +230,7 @@ function CalendarControl() {
       </div>
       <div class="calendar-next"><a href="#">></a></div>
       </div>
-      <div class="calendar-today-date">S:  ${calendar.getWeek()}, 
+      <div class="calendar-today-date">S:  ${calendarControl.localDate.getWeek()}, 
         ${calendarControl.calWeekDays[calendarControl.localDate.getDay()]}, 
         ${calendarControl.localDate.getDate()}, 
         ${calendarControl.calMonthName[calendarControl.localDate.getMonth()]} 
