--- a/calendar2.html
+++ b/calendar2.html
@@ -178,16 +178,6 @@ function CalendarControl() {
     lastDayNumber: function() {
       return calendarControl.lastDay().getDay() + 1;
     },
-    currentWeek: function() {
-  var date = new Date(year, month, 0).getDate();
-  date.setHours(0, 0, 0, 0);
-  // Thursday in current week decides the year.
-  date.setDate(date.getDate() + 3 - (date.getDay() + 6) % 7);
-  // January 4 is always in week 1.
-  var week1 = new Date(date.getFullYear(), 0, 4);
-  // Adjust to Thursday in week 1 and count number of weeks from date to week1.
-  return 1 + Math.round(((date.getTime() - week1.getTime()) / 86400000 - 3 + (week1.getDay() + 6) % 7) / 7);
-},
     getPreviousMonthLastDate: function() {
       let lastDate = new Date(
         calendar.getFullYear(),
@@ -240,7 +230,7 @@ function CalendarControl() {
       </div>
       <div class="calendar-next"><a href="#">></a></div>
       </div>
-      <div class="calendar-today-date">S:  ${calendarControl.currentWeek()}, 
+      <div class="calendar-today-date">S:  
         ${calendarControl.calWeekDays[calendarControl.localDate.getDay()]}, 
         ${calendarControl.localDate.getDate()}, 
         ${calendarControl.calMonthName[calendarControl.localDate.getMonth()]} 
