--- a/weekly-widget-sunday.html
+++ b/weekly-widget-sunday.html
@@ -139,7 +139,7 @@ h1 {
               <div class="colon">:</div>
               <div class="time" id="sec"></div>
             </div>
-            <a class="weatherwidget-io" href="https://forecast7.com/en/31d2029d92/alexandria/" data-label_1="ALEXANDRIA" data-label_2="WEATHER" data-days="3" data-theme="gray" >ALEXANDRIA WEATHER</a>
+            <a class="weatherwidget-io" href="https://forecast7.com/en/31d2029d92/alexandria/" data-label_1="VILLEFRANCHE-SUR-SAONE" data-label_2="WEATHER" data-days="5" data-theme="kiwi" >Météo</a>
 
           </div>
           
