--- a/weekly-widget-sunday.html
+++ b/weekly-widget-sunday.html
@@ -150,9 +150,7 @@ h1 {
 
                 <div class="counter" id="counter">
       
-                    <h3 class="h3">
-                        Time left in This Week
-                   </h3>
+                    <h3 class="h3" id="semaine"></h3>
                     <h2 class="box" id="days"></h2>
                     <h2 class="box" id="hours"></h2>
                     <h2 class="box" id="minutes"></h2>
@@ -241,7 +239,7 @@ dateTime()
     left_days = document.getElementById("days");
     left_hours = document.getElementById("hours");
     left_minutes = document.getElementById("minutes");
- 
+    current_week = document.getElementById("semaine");
     }
     function showRemaining (){
     now = new Date();
@@ -250,9 +248,10 @@ dateTime()
     days = 6 - now.getDay();
     hours = 23 - now.getHours();
     minutes = 59 - now.getMinutes();
-    left_days.innerHTML = days + "<br> <span style=\"color:#f58f70\" class=\"small\"> days </span>"
+    left_days.innerHTML = days + "<br> <span style=\"color:#f58f70\" class=\"small\"> Jours </span>"
     left_hours.innerHTML = hours + "<br> <span style=\"color:#5ebcfc\" class=\"small\"> hours</span>";
-    left_minutes.innerHTML = currentWeek() + "<br> <span style=\"color:##dcdcdc\" class=\"small\">mins</span>";
+    left_minutes.innerHTML = minutes + "<br> <span style=\"color:##dcdcdc\" class=\"small\">mins</span>";
+    current_week.innerHTML =   "<br> <span style=\"color:##dcdcdc\" class=\"small\">Semaine :"+currentWeek()+"</span>";
     }
     function currentWeek(){
       var date = new Date(year, month, 0).getDate();
