--- a/weekly-widget-sunday.html
+++ b/weekly-widget-sunday.html
@@ -254,14 +254,13 @@ dateTime()
     current_week.innerHTML =   "<br> <span style=\"color:##dcdcdc\" class=\"small\">Semaine :"+currentWeek()+"</span>";
     }
     function currentWeek(){
-      var date = new Date(year, month, 0).getDate();
-      date.setHours(0, 0, 0, 0);
-      // Thursday in current week decides the year.
-      date.setDate(date.getDate() + 3 - (date.getDay() + 6) % 7);
-      // January 4 is always in week 1.
-      var week1 = new Date(date.getFullYear(), 0, 4);
-      // Adjust to Thursday in week 1 and count number of weeks from date to week1.
-      return 1 + Math.round(((date.getTime() - week1.getTime()) / 86400000 - 3 + (week1.getDay() + 6) % 7) / 7);
+     
+        currentDate = new Date();
+        startDate = new Date(currentDate.getFullYear(), 0, 1);
+        var days = Math.floor((currentDate - startDate) /
+            (24 * 60 * 60 * 1000));
+         
+        return weekNumber = Math.ceil(days / 7);
     }
 timer = setInterval (showRemaining, 1000) 
 CountDownTimer() ;
