--- a/weekly-widget-sunday.html
+++ b/weekly-widget-sunday.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Bebas+Neue" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
@@ -180,7 +180,7 @@ document.getElementById('date').innerHTML = today.toDateString();
 
 
 function clock() {
-var today = new Date();
+var today = new Date().toLocaleDateString("fr");
 var hour = zeros(twelveHour(today.getHours()));
 var minutes = zeros(today.getMinutes());
 var seconds = zeros(today.getSeconds());
