--- a/weekly-widget-sunday.html
+++ b/weekly-widget-sunday.html
@@ -17,8 +17,8 @@ body{
 
     line-height: 1.6;
     text-align: center;
-    font-family: 'Fjalla One', sans-serif;
-
+/*  font-family: 'Fjalla One', sans-serif;*/
+   font-family: 'Dancing Script', cursive;
 }
 
 h1 {
@@ -118,10 +118,66 @@ h1 {
             font-weight: 100;
         }
 
+// *** Magic starts HERE
+diameter = 35vmax
 
+.aurora
+	background #000
+	position relative
+	&:before,
+	&:after
+		content ''
+		display block
+		position absolute
+		width 1px
+		height 1px
+		border-radius 100%
+		opacity .18
+		// transform rotate(55deg)
+	&:before
+		box-shadow 0 0 diameter diameter red
+		animation:
+			hue 5s 0s linear infinite,
+			move1 10s 0s linear infinite
+	&:after
+		box-shadow 0 0 diameter diameter cyan
+		animation:
+			hue 10s 0s linear infinite,
+			move2 20s 0s linear infinite
+@keyframes hue
+	0%
+		filter hue-rotate(0deg)
+	100%
+		filter hue-rotate(360deg)
+@keyframes move1
+	0%
+		top 0vh
+		left 50vw
+	25%
+		left 0vw
+	50%
+		top 100vh
+	75%
+		left 100vw
+	100%
+		top 0vh
+		left 50vw
+@keyframes move2
+	0%
+		top 50vh
+		left 100vw
+	25%
+		top 100vh
+	50%
+		left 0vw
+	75%
+		top 0vh
+	100%
+		top 50vh
+		left 100vw
     </style>
 </head>
-<body>
+<body class="aurora">
 
    
 <div class="content">
@@ -139,8 +195,7 @@ h1 {
               <div class="colon">:</div>
               <div class="time" id="sec"></div>
             </div>
-            <a class="weatherwidget-io" href="https://forecast7.com/en/31d2029d92/alexandria/" data-label_1="VILLEFRANCHE-SUR-SAONE" data-days="5" data-theme="kiwi" >Météo</a>
-
+            <a class="weatherwidget-io" href="https://forecast7.com/fr/45d994d72/villefranche-sur-saone/" data-label_1="VILLEFRANCHE-SUR-SAONE" data-font="Open Sans" data-icons="Climacons Animated" data-days="5" data-theme="hexellence" data-textcolor="#64a9b7" data-suncolor="#feffa4" data-cloudcolor="#93b8ed" >VILLEFRANCHE-SUR-SAONE</a>
           </div>
           
         </div>
