--- a/calculator.html
+++ b/calculator.html
@@ -72,7 +72,7 @@ a:visited  {
 .calculator button:hover,
 #clear:hover,
 #backspace:hover {
-  background: #f7e583!important;
+  background: lightskyblue!important;
   color: #626262;
   transform: scale(0.9);
   border-radius: 20%;
