--- a/index.html
+++ b/index.html
@@ -107,8 +107,33 @@
         <a href="https://kayoo123.github.io/astroo-api/mensuel.json"><li class="item float-item">Mensuel</li></a>
       </ul>
     </div>
+<!-- (A) DIV CONTAINER -->
+<div id="demoA"></div>
 
+ <!-- (B) JAVASCRIPT -->
+<script>
+// (B1) JSON STRING TO ARRAY
+var url = "https://kayoo123.github.io/astroo-api/jour.json"; 
+fetch(url)
+.then(res => res.json())
+.then(out =>
+  console.log('Checkout this JSON! ', out))
+.catch(err => { throw err });
+
+// (B2) CREATE LIST
+var list = document.createElement("ol");
+for (let i of out) {
+  let item = document.createElement("li");
+  item.innerHTML = i;
+  list.appendChild(item);
+}
+
+// (B3) APPEND LIST TO CONTAINER
+document.getElementById("demoA").appendChild(list);
+</script>
     <script>
+
+      
       function date() {
         var today = new Date();
         document.getElementById("date").innerHTML = today.toDateString();
