--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 <script>
 // (B1) JSON STRING TO ARRAY
 var url = "https://kayoo123.github.io/astroo-api/jour.json"; 
+var out = {};
 fetch(url)
 .then(res => res.json())
 .then(out =>
