--- a/index.html
+++ b/index.html
@@ -114,16 +114,10 @@
 <script>
 // (B1) JSON STRING TO ARRAY
 var url = "https://kayoo123.github.io/astroo-api/jour.json"; 
-var out = {};
-fetch(url)
-.then(res => res.json())
-.then(out =>
-  console.log('Checkout this JSON! ', out))
-.catch(err => { throw err });
-
+var obj = await (await fetch(url)).json();
 // (B2) CREATE LIST
 var list = document.createElement("ol");
-for (let i of out) {
+for (let i of obj) {
   let item = document.createElement("li");
   item.innerHTML = i;
   list.appendChild(item);
