--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         float: left;
       }
     </style>
-    <style   src="./style.scss"></style>
+    <style   src="./style.css"></style>
   </head>
   <body>
     <link
@@ -164,37 +164,45 @@
 
     <script>
 
-const hours = document.querySelector('.hours');
-const minutes = document.querySelector('.minutes');
-const seconds = document.querySelector('.seconds');
-const horloge = document.querySelector('.horloge');
-clock = () => {
-  let today = new Date();
-  let h = (today.getHours() % 12) + today.getMinutes() / 59; // 22 % 12 = 10pm
-  let m = today.getMinutes(); // 0 - 59
-  let s = today.getSeconds(); // 0 - 59
-  horloge.innerText =today.getHours()+":"+today.getMinutes()+":"+today.getSeconds();
-  h *= 30; // 12 * 30 = 360deg
-  m *= 6;
-  s *= 6; // 60 * 6 = 360deg
+      const hours = document.querySelector('.hours');
+      const minutes = document.querySelector('.minutes');
+      const seconds = document.querySelector('.seconds');
+      const horloge = document.querySelector('.horloge');
+      clock = () => {
+        let today = new Date();
+        let h = (today.getHours() % 12) + today.getMinutes() / 59; // 22 % 12 = 10pm
+        let m = today.getMinutes(); // 0 - 59
+        let s = today.getSeconds(); // 0 - 59
+        horloge.innerText =today.getHours()+":"+today.getMinutes()+":"+today.getSeconds();
+        h *= 30; // 12 * 30 = 360deg
+        m *= 6;
+        s *= 6; // 60 * 6 = 360deg
 
-  rotation(hours, h);
-  rotation(minutes, m);
-  rotation(seconds, s);
+        rotation(hours, h);
+        rotation(minutes, m);
+        rotation(seconds, s);
 
-  // call every second
-  setTimeout(clock, 500);
-}
+        // call every second
+        setTimeout(clock, 500);
+      }
 
-rotation = (target, val) => {
-  target.style.transform =  `rotate(${val}deg)`;
-}
+      rotation = (target, val) => {
+        target.style.transform =  'rotate(${val}deg)';
+      }
 
-window.onload = clock();
+      window.onload = clock();
 
 
+      
       var url = "https://kayoo123.github.io/astroo-api/jour.json";
-      var obj = await ((await fetch(url)).json());
+
+
+      fetch(url)
+    .then(result => result.json())
+    .then((output) => {
+      obj= output;
+}).catch(err => console.error(err));
+
       var list = document.createElement("ol");
       for (let i of obj) {
         let item = document.createElement("li");
