--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         float: left;
       }
     </style>
-    <style   src="./style.css"></style>
+    <style   src="style.css"></style>
   </head>
   <body>
     <link
