--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
             function clock() {
               var today = new Date();
-              var hour = zeros(today.getHours()));
+              var hour = zeros(today.getHours());
               var minutes = zeros(today.getMinutes());
               var seconds = zeros(today.getSeconds());
               hrs = today.getHours();
