--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
         rotation(hours, h);
         rotation(minutes, today.getMinutes() * 6);
-        rotation(seconds, stoday.getSeconds() * 6);
+        rotation(seconds, today.getSeconds() * 6);
       }
 
       // adds zero infront of single digit number
