--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       body {
         background-color: #fff;
         line-height: 1.6;
+        font-family: 'Oooh Baby', cursive;
       }
 
       h1 {
@@ -46,23 +47,7 @@
         box-shadow: none;
       }
 
-      .clock {
-        display: inline-block;
-        font-family: "Roboto", sans-serif;
-        font-weight: bold;
-        font-size: 1.2em;
-        /* padding-left: 20px; */
-      }
-
-      .time {
-        display: inline-block;
-        min-width: 37px;
-      }
-
-      .colon {
-        font-size: 1.1em;
-        display: inline-block;
-      }
+      
 
       .date {
         display: block;
@@ -75,7 +60,7 @@
       .greet {
         min-width: 162px;
         /* padding-right: 30px; */
-        font-family: "Roboto", sans-serif;
+        font-family: 'Oooh Baby', cursive;
         font-size: 1.2em;
       }
     </style>
@@ -120,6 +105,11 @@
       href="https://fonts.googleapis.com/css?family=Lobster|Roboto:400,700"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap"
+      rel="stylesheet"
+    />
+    
 
     <div class="full-table">
       <div class="table-cell">
