--- a/index.html
+++ b/index.html
@@ -161,11 +161,7 @@
         item.innerHTML = i;
         list.appendChild(item);
       }
-      document.getElementById("demoA").appendChild(list);
-      const hours = document.getElementsByClassName("hours");
-      const minutes = document.getElementsByClassName("minutes");
-      const seconds = document.getElementsByClassName("seconds");
-      const horloge = document.getElementsByClassName("horloge");
+      document.getElementById("demoA").appendChild(list); 
       function date() {
         var today = new Date();
         document.getElementById("date").innerHTML = today.toDateString();
@@ -178,17 +174,17 @@
         else if (hrs >= 12 && hrs <= 17) greet = "Bon après midi ";
         else if (hrs >= 17 && hrs <= 24) greet = "Bonne soirée  ";
         document.getElementById("greet").innerHTML = greet;
-        var h = ((today.getHours() % 12) + today.getMinutes() / 59)*30; // 22 % 12 = 10pm
-        horloge.innerText =
+        document.getElementsByClassName("horloge").innerText =
         zeros(today.getHours())+
           ":" +
           zeros(today.getMinutes()) +
           ":" +
           zeros(today.getSeconds());
-
-        rotation(hours, h);
-        rotation(minutes, today.getMinutes() * 6);
-        rotation(seconds, today.getSeconds() * 6);
+          
+        var h = ((today.getHours() % 12) + today.getMinutes() / 59)*30; // 22 % 12 = 10pm
+        document.getElementsByClassName("hours").style.transform="rotate("+h+"deg)"
+        document.getElementsByClassName("minutes").style.transform="rotate("+today.getMinutes() * 6+"deg)"
+        document.getElementsByClassName("seconds").style.transform="rotate("+today.getSeconds() * 6+"deg)" 
       }
 
       // adds zero infront of single digit number
@@ -203,10 +199,7 @@
        // date();
         clock();
         setTimeout(dateTime, 500);
-      }
-      rotation = (target, val) => {
-        target.style.transform = 'rotate(${val}deg)';
-      };
+      } 
 
       dateTime();
       // END
