--- a/index.html
+++ b/index.html
@@ -111,10 +111,9 @@
     <div class="full-table">
       <div class="table-cell">
         <div class="card">
-          <div class="greet" id="greet"></div>
           <div class="date" id="date"></div>
           <div class="clock">
-            <span class="horloge">test</span>
+            <span class="horloge" id="horloge"></span>
             <div class="hand hours" id="aig_h"></div>
             <div class="hand minutes" id="aig_m"></div>
             <div class="hand seconds" id="aig_s"></div>
@@ -145,13 +144,16 @@
 
     <script>
       var url = "https://kayoo123.github.io/astroo-api/jour.json";
-
       var list = document.createElement("ol");
-      for (let i of url) {
+      fetch(url).then(r => r.json())
+  .then(data => {for (let i of data) {
         let item = document.createElement("li");
         item.innerHTML = i;
-        list.appendChild(item);
-      }
+        list.appendChild(item);}
+      })
+  .catch(e => console.log("Booo"))
+      
+      
       document.getElementById("demoA").appendChild(list);
       function date() {
         var today = new Date();
@@ -160,21 +162,17 @@
       const span_h = document.getElementById("aig_h");
       const span_m = document.getElementById("aig_m");
       const span_s = document.getElementById("aig_s");
-
+      const span_horloge = document.getElementById("horloge");
+      const span_date = document.getElementById("date");
+      const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
       function clock() {
         var today = new Date();
         hrs = today.getHours();
         if (hrs < 12) greet = "Bonjour";
         else if (hrs >= 12 && hrs <= 17) greet = "Bon après midi ";
         else if (hrs >= 17 && hrs <= 24) greet = "Bonne soirée  ";
-        document.getElementById("greet").innerHTML = greet;
-        document.getElementsByClassName("horloge").innerText =
-          zeros(today.getHours()) +
-          ":" +
-          zeros(today.getMinutes()) +
-          ":" +
-          zeros(today.getSeconds());
-
+        span_date.innerHTML = greet+ " nous sommes le "+ today.toLocaleDateString("fr-FR",options);
+        span_horloge.innerText =zeros(today.getHours()) +":" +zeros(today.getMinutes()) +":" +zeros(today.getSeconds()); 
         var h = ((today.getHours() % 12) + today.getMinutes() / 59) * 30; // 22 % 12 = 10pm
         span_h.style.transform = `rotate(${h}deg)`;
         span_m.style.transform = "rotate(" + today.getMinutes() * 6 + "deg)";
@@ -190,7 +188,7 @@
       }
 
       function dateTime() {
-         date();
+        date();
         clock();
         setTimeout(dateTime, 500);
       }
