--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
 
           newListItem.innerHTML = json[i];
 
-          newList.appendChild(newListItem);
+          list.appendChild(newListItem);
         }
-        document.getElementById("demoA").appendChild(newList);
+        document.getElementById("demoA").appendChild(list);
       }
 
       function date() {
