--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           return doSomethingWith(json);
         });
       function doSomethingWith(json) {
-        console.log("doSomethingWith"+json.length);
+        console.log("doSomethingWith"+json.vierge);
         for (var i = 0; i < json.length; i++) {
           var newListItem = document.createElement("li");
           console.log(json['vierge']);
